[package]
name = "rustbuster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
indicatif = "0.17.8"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
derive_more = { version = "1.0.0-beta.6", features = ["from"] }

[dev-dependencies]
mockito = "1.4.0"
